--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,4 +57,13 @@
 		<servlet-name>ChangePasswordServlet</servlet-name>
 		<url-pattern>/changepasswordservlet</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>servlet/RegisterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/registerservlet</url-pattern>
+	</servlet-mapping>
 </web-app>
